kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: samling
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
