kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: samling
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - secretName: samling-cert
  rules:
    - host: example.com  # NOTE: Replaced by overlay specific patch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: samling
                port:
                  number: 8080
